--- a/08-todos/index.html
+++ b/08-todos/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Todos</title>
+  <link rel="stylesheet" href="bundle.css">
 </head>
 <body>
   <div id="root"></div>
